--- a/app/src/main/res/layout/list_item_asteroid.xml
+++ b/app/src/main/res/layout/list_item_asteroid.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="asteroid"
             type="com.udacity.asteroidradar.Asteroid" />
@@ -16,6 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(asteroid)}"
         tools:background="@android:color/black">
 
         <TextView
@@ -58,11 +60,11 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:statusIcon="@{asteroid.potentiallyHazardous}"
             android:contentDescription="@string/status"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:statusIcon="@{asteroid.potentiallyHazardous}"
             tools:srcCompat="@drawable/ic_status_normal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
